--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,21 @@
 }
 
 html {
+  width: 800px;
+  height: 600px;
   font-size: 16px;
   overflow: hidden;
-  height: 100%;
 }
 
 body {
+  width: 800px;
+  height: 600px;
   margin: 0;
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
   overflow: auto;
   font-size: 16px;
 }
