--- a/Popup/src/index.css
+++ b/Popup/src/index.css
@@ -8,6 +8,7 @@ html {
   height: 600px;
   font-size: 16px;
   overflow: hidden;
+  background: #ffffff;
 }
 
 body {
@@ -21,6 +22,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
   font-size: 16px;
+  background: #EEEEEE;
 }
 
 code {
