--- a/Popup/src/index.css
+++ b/Popup/src/index.css
@@ -22,7 +22,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
   font-size: 16px;
-  background: #EEEEEE;
+  border: 1px solid black;
 }
 
 code {
