--- a/Popup/src/index.css
+++ b/Popup/src/index.css
@@ -8,7 +8,6 @@ html {
   height: 600px;
   font-size: 16px;
   overflow: hidden;
-  background: #ffffff;
 }
 
 body {
@@ -22,7 +21,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
   font-size: 16px;
-  border: 1px solid black;
+  background: #efefef;
 }
 
 code {
